V1.07 Scrollbar Fix

--- a/SCSS/_components.scss
+++ b/SCSS/_components.scss
@@ -31,7 +31,7 @@ body {
 }
 @media (max-width: 768px) {
   ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
   opacity: 0.5;
   transition: width 0.2s ease-out;
   }
